[tool.poetry]
name = "fs.onedrivefs"
packages = [
    { include = "fs"}
]
version = "1.1.5"
description = "Pyfilesystem2 implementation for OneDrive using Microsoft Graph API"
authors = ["Rehan Khwaja <rehan@khwaja.name>"]
license = "MIT"
homepage = "https://github.com/rkhwaja/fs.onedrivefs"
keywords = ["filesystem", "Pyfilesystem2", "onedrive"]
readme = "README.md"
classifiers = [
	"License :: OSI Approved :: MIT License",
	"Development Status :: 5 - Production/Stable",
	"Intended Audience :: Developers",
	"Programming Language :: Python :: 3.8",
	"Programming Language :: Python :: 3.9",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12"
]

[tool.poetry.dependencies]
python = ">=3.8,<4"
# Need 2.0.5 for opendir factory parameter
# Need 2.0.6 because in 2.0.5, opener didn't work
# Need 2.4.13 for preserve_time flag
fs = ">=2.4.13,<3"
requests = ">=2.20"
requests-oauthlib = ">=1.2.0"

[tool.poetry.dev-dependencies]
pyperclip = ">=1.7"
pytest = ">=3.10"
pytest-localserver = ">=0.5.0"
pyngrok = ">=5.0.6,<6"
click = ">=7.0"
pytest-cov = ">=2.9.0"
pynacl = ">=1.5.0"
cffi = [
	{ version = ">=1.15.0", markers = "sys_platform == 'darwin'" }
]
pytest-rerunfailures = ">=10"
poethepoet = ">=0.16.4"
pytest-xdist = ">=3.2.1"
ruff = ">=0.0.291"

[tool.poetry.plugins] # Optional super table

[tool.poetry.plugins."fs.opener"]
"onedrive" = "fs.onedrivefs.opener:OneDriveFSOpener"

[tool.poe.tasks]
lint = "ruff fs/onedrivefs/ tests/"

[tool.poe.tasks.test]
shell = """
pytest --cov=fs -n 8 --reruns 2 --only-rerun requests.exceptions.HTTPError || exit 1
coverage xml
"""

[tool.ruff]
line-length = 1000
ignore = ["ANN", "B011", "COM812", "D", "DTZ", "EM", "ERA001", "FBT002", "FIX", "G004", "I", "N802", "N803", "N806", "N815", "N816", "PLR0913", "PTH", "S101", "T201", "TD", "TRY003", "W191"]
select = ["ALL"]
target-version = "py37"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]
"fs/**" = ["PT"]
"tests/**" = ["N999", "PT009", "PT011", "PT013"]

[tool.ruff.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "single"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
