[metadata]
name = fs.onedrivefs
version = 0.1.3
author = Rehan Khwaja
author-email = rehan@khwaja.name
home-page = https://github.com/rkhwaja/fs.onedrivefs
description = Pyfilesystem2 implementation for OneDrive using Microsoft Graph API
long-description = file: README.rst
license = MIT
platform = any
keywords = filesystem, Pyfilesystem2, onedrive

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.6
packages = fs.onedrivefs, fs.opener
install_requires =
  fs
  onedrivesdk
  temp-utils
  requests-oauthlib

[bdist_wheel]
universal = 0

[options.entry_points]
fs.opener =
	onedrive = fs.opener.onedrivefs:OneDriveOpener
